<resources>
    <string name="app_name">Market</string>
    <string name="Market">Market</string>
    <string name="UserName">User Name</string>
    <string name="Password">Password</string>
    <string name="NotAMemberQuestion"><u>Not a Member?</u></string>
    <string name="LoginButton">Login</string>
    <string name="FirstName">First Name:</string>
    <string name="LastName">Last Name:</string>
    <string name="MobileNo">Mobile No:</string>
    <string name="Address">Address:</string>
    <string name="email">E-mail:</string>
    <string name="ReEnter">Re-Enter:</string>
    <string name="RegisterMeButton">Register Me</string>
    <string name="Amount">Amount</string>
    <string name="AddToCart">Add to Cart</string>
    <string name="EditButton">Edit</string>
    <string name="RemoveButton">Remove</string>
    <string name="OrderListButton">Order List</string>
    <string name="Admin">Admin</string>
    <string name="Delivery">Delivery</string>
    <string name="Worker">Worker</string>
    <string name="slogan">Set your hours. Deliver. Get paid. With Grubhub, it is easy to earn competitive pay Get car decals warming bags and more from Grubhub or use your own</string>
    <string name="SubTotal">Sub Total</string>
    <string name="nic">NIC</string>
    <string name="btnSave">SAVE</string>
    <string name="btnEdit">EDIT</string>

    <!--**********************************************Liyanage.D.R.Y  IT18119718*************************************************************************-->

    <!--*******veg.XML Srings********-->
    <string name="Vegetables">Vegetables</string>
    <string name="textView7">ID:</string>
    <string name="id">ID</string>
    <string name="textView40">Price:</string>
    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="textView8">Name:</string>
    <string name="textView9">QTY:</string>
    <string name="qty">Qty</string>
    <string name="Addnew">Add</string>
    <string name="View1">View</string>
    <string name="Delete1">Delete</string>
    <string name="update1">Update</string>
    <string name="textView42">ID:</string>
    <string name="id2">ID</string>
    <string name="textView43">Name:</string>
    <string name="name2">Name</string>
    <string name="textView44">Price:</string>
    <string name="price2">Price</string>
    <string name="textView45">QTY:</string>
    <string name="qty2">QTY</string>
    <string name="View2">View</string>
    <string name="delete2">Delete</string>
    <string name="Update2">Update</string>
    <!--*******home.XML Srings********-->
    <string name="textview6">Hi Have a Nice Day!</string>
    <string name="button17">Dash Board</string>


    <!--*******InserIteam.XML Srings********-->
    <string name="additeam">Add Iteam</string>
    <string name="et_IteamId">Iteam Id</string>
    <string name="tv_IeamId">Iteam Id</string>
    <string name="et_Name">Name</string>
    <string name="tv_Name">Name</string>
    <string name="et_QTY">QTY</string>
    <string name="tv_QTY">Quantity</string>
    <string name="et_price">Price</string>
    <string name="tv_Price">Price</string>
    <string name="Addnew1">Add</string>

    <!--*******admin dash.XML Srings********-->
    <string name="textView">Admin Dash</string>
    <string name="button16">Vegetable</string>
    <string name="button">Fruit</string>


    <!--*******admin dash.XML Srings********-->
    <string name="fruit">Fruits</string>
    <string name="button4">Fish n Meat</string>


    <!--*******************************************kusal**********************************************************-->

    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="ContactNo">Contact No</string>
    <string name="Nic_no">NIC No</string>
    <string name="Vehical_no">Vehical No</string>
    <string name="Password_diliver">Password</string>
    <string name="Repassword_diliver">Re Enter Password</string>
    <string name="Register">Register Me</string>
    <string name="showdetailsdiliver">SHOW DETAILS</string>
    <string name="updatedetailsdiliver">UPDATE ACCOUNT</string>
    <string name="deletediliver">DELETE ACCOUNT</string>
    <string name="order">PLACE ORDER</string>
    <string name="itemNo">Item No</string>
    <string name="itemDescription">Item Description</string>
    <string name="quantity">Quantity</string>
    <string name="priceInRuppees">Price Rs.</string>


</resources>
