<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    card_view:cardCornerRadius="6dp"
    card_view:contentPadding="2dp"
    card_view:cardElevation="4dp"
    card_view:cardMaxElevation="6dp"
    android:background="@color/cardview_dark_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#C4C1C0"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="145dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFFEFE">

            <ImageView
                android:id="@+id/itemPicCart"
                android:layout_width="145dp"
                android:layout_height="145dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="7dp"
                android:scaleType="fitXY" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FCFBF8"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/itemNo"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/itemNoCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/priceInRuppees"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/priceCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/quantityCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:ems="10"
                android:inputType="number" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/rounded_corner_button"
                    android:text="@string/btnEdit" />

                <Button
                    android:id="@+id/btnRemove"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/rounded_corner_button_red"
                    android:text="@string/RemoveButton" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>