<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    card_view:cardCornerRadius="6dp"
    card_view:contentPadding="2dp"
    card_view:cardElevation="4dp"
    card_view:cardMaxElevation="6dp"
    android:background="@color/cardview_dark_background"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="2"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="96dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/itemPic"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="7dp"
            android:scaleType="fitXY" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/itemDescription"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/itemDescriptionItemMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/itemNo"
            android:textSize="15sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/itemNo"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/priceInRuppees"
            android:textSize="15sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/price"
            />

        <Button
            android:id="@+id/buy"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/rounded_corner_button"
            android:drawableStart="@drawable/shoppingcartbutton"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/AddToCart"
            android:visibility="invisible" />
    </LinearLayout>




</LinearLayout>
</android.support.v7.widget.CardView>