<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="@drawable/finger">

   <!-- <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>-->

    <ImageView
        android:id="@+id/iv_user"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/download1"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="45dp" />
    <!-- name-->
    <EditText
        android:id="@+id/et_name"
        android:textColor="#ffffff"
        android:background="#11000000"
        android:layout_width="260dp"
        android:layout_height="30dp"
        android:layout_below="@+id/iv_user"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint= "@string/Name"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_user"
        android:layout_alignStart="@+id/et_name"
        android:layout_alignLeft="@+id/et_name"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="17dp"
        android:text="@string/Name"
        android:textColor="#ffffff"
        android:textSize="16sp" />
    <!--email-->
    <EditText
        android:id="@+id/et_email"
        android:textColor="#ffffff"
        android:background="#11000000"
        android:layout_width="260dp"
        android:layout_height="30dp"
        android:layout_below="@+id/et_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/Email" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_name"
        android:layout_alignStart="@+id/et_name"
        android:layout_alignLeft="@+id/et_name"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="17dp"
        android:text="@string/Email"
        android:textColor="#ffffff"
        android:textSize="16sp" />
    <!--Contact-->
    <EditText
        android:id="@+id/et_contactno"
        android:textColor="#ffffff"
        android:background="#11000000"
        android:layout_width="260dp"
        android:layout_height="30dp"
        android:layout_below="@+id/et_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/ContactNo" />

    <TextView
        android:id="@+id/tv_contactno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_email"
        android:layout_alignStart="@+id/et_name"
        android:layout_alignLeft="@+id/et_name"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="17dp"
        android:text="@string/ContactNo"
        android:textColor="#ffffff"
        android:textSize="16sp" />
    <!--Nic-->
    <EditText
        android:id="@+id/et_nic"
        android:textColor="#ffffff"
        android:background="#11000000"
        android:layout_width="260dp"
        android:layout_height="30dp"
        android:layout_below="@+id/et_contactno"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/Nic_no" />

    <TextView
        android:id="@+id/tv_nic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_contactno"
        android:layout_alignStart="@+id/et_name"
        android:layout_alignLeft="@+id/et_name"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="17dp"
        android:text="@string/Nic_no"
        android:textColor="#ffffff"
        android:textSize="16sp" />
    <!--vehcal-->
    <EditText
        android:id="@+id/et_vehicalno"
        android:textColor="#ffffff"
        android:background="#11000000"
        android:layout_width="260dp"
        android:layout_height="30dp"
        android:layout_below="@+id/et_nic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/Vehical_no" />

    <TextView
        android:id="@+id/tv_vehicalno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_nic"
        android:layout_alignStart="@+id/et_name"
        android:layout_alignLeft="@+id/et_name"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="17dp"
        android:text="@string/Vehical_no"
        android:textColor="#ffffff"
        android:textSize="16sp" />

    <!--password-->
    <EditText
        android:id="@+id/et_passowrd"
        android:textColor="#ffffff"
        android:background="#11000000"
        android:layout_width="260dp"
        android:layout_height="30dp"
        android:layout_below="@+id/et_vehicalno"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/Password_diliver" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_vehicalno"
        android:layout_alignStart="@+id/et_name"
        android:layout_alignLeft="@+id/et_name"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="17dp"
        android:text="@string/Password_diliver"
        android:textColor="#ffffff"
        android:textSize="16sp" />

    <!--re enter password-->
    <EditText
        android:id="@+id/et_repassword"
        android:textColor="#ffffff"
        android:background="#11000000"
        android:layout_width="260dp"
        android:layout_height="30dp"
        android:layout_below="@+id/et_passowrd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/Repassword_diliver" />

    <TextView
        android:id="@+id/tv_repassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_passowrd"
        android:layout_alignStart="@+id/et_name"
        android:layout_alignLeft="@+id/et_name"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="17dp"
        android:text="@string/Repassword_diliver"
        android:textColor="#ffffff"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_register"
        android:background="@drawable/mybutton"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_below="@+id/et_repassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/Register" />

</RelativeLayout>